--- a/ch02/ch02_perceptron.ipynb
+++ b/ch02/ch02_perceptron.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,11 +84,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.3 重みとバイアスによる実装"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def AND(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([0.5, 0.5])\n",
+    "    b = -0.7\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NAND(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([-0.5, -0.5])\n",
+    "    b = 0.7\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OR(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([0.5, 0.5])\n",
+    "    b = -0.2\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 多層パーセプトロン\n",
+    "### 2.5.2 XORゲートの実装"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def XOR(x1, x2):\n",
+    "    s1 = NAND(x1, x2)\n",
+    "    s2 = OR(x1, x2)\n",
+    "    y = AND(s1, s2)\n",
+    "    return y\n",
+    "\n",
+    "print(XOR(0, 0))\n",
+    "print(XOR(1, 0))\n",
+    "print(XOR(0, 1))\n",
+    "print(XOR(1, 1))"
+   ]
   }
  ],
  "metadata": {
